force-app/main/default/objects/sked_Staffing_Budget_Site__c/sked_Staffing_Budget_Site__c.object-meta.xml
<CustomObject>
    <description>Junction Object for Staffing Budget - Site</description>
    <label>Staffing Budget Site</label>
    <nameField>
        <displayFormat>SBS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staffing Budget Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>