force-app/main/default/objects/sked_Staffing_Budget_Site__c/fields/sked_Location__c.field-meta.xml
<CustomField>
    <fullName>sked_Location__c</fullName>
    <label>Site</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Staffing Budget Sites</relationshipLabel>
    <relationshipName>sked_Staffing_Budget_Sites</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>