force-app/main/default/objects/sked_Staffing_Budget_Site__c/fields/sked_Specific_Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>sked_Specific_Collection_Operation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will capture the collection active at the time of staffing budget date</description>
    <label>Specific Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Staffing Budget Sites</relationshipLabel>
    <relationshipName>Staffing_Budget_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>